hphp/test/zend/good/ext/gmp/tests/gmp_clrbit.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded("gmp")) print "skip";
}
