hphp/test/zend/bad/ext/gmp/tests/gmp_export.php.skipif
<?php if (!extension_loaded("gmp")) echo "skip"; ?>